# fastapi-serverless-aws-template

./: .gitignore  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
src/: handler.py  permissions.py  runtime_info.py  types.py
src/routers/: __init__.py  token.py
src/routers/stuff/: models.py  router.py
tests/: conftest.py  handler_test.py
tests/routers/: stuff_test.py  token_test.py
